# Pico_Project_Creator

./: CMakeLists.txt  ProjectCreationNotes.txt  README.md  TestCPP.cpp
Test/: CMakeLists.txt  test.c
Test2/: Main.c
Test2/INC/: test1.h
Test2/SRC/: test1.c
pico-examples-eclipse/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
pico-examples-eclipse/adc/: Makefile  cmake_install.cmake
pico-examples-eclipse/blink/: Makefile  blink.dis  blink.elf  blink.elf.map  blink.uf2  cmake_install.cmake
pico-examples-eclipse/blink_simple/: Makefile  blink_simple.dis  blink_simple.elf  blink_simple.elf.map  blink_simple.uf2  cmake_install.cmake
pico-examples-eclipse/bootloaders/: Makefile  cmake_install.cmake
pico-examples-eclipse/clocks/: Makefile  cmake_install.cmake
pico-examples-eclipse/cmake/: Makefile  cmake_install.cmake
pico-examples-eclipse/dcp/: Makefile  cmake_install.cmake
pico-examples-eclipse/divider/: Makefile  cmake_install.cmake  hello_divider.dis  hello_divider.elf  hello_divider.elf.map  hello_divider.uf2
pico-examples-eclipse/dma/: Makefile  cmake_install.cmake
pico-examples-eclipse/flash/: Makefile  cmake_install.cmake
pico-examples-eclipse/freertos/: Makefile  cmake_install.cmake
pico-examples-eclipse/gpio/: Makefile  cmake_install.cmake
pico-examples-eclipse/hello_world/: Makefile  cmake_install.cmake
pico-examples-eclipse/hstx/: Makefile  cmake_install.cmake
pico-examples-eclipse/i2c/: Makefile  cmake_install.cmake
pico-examples-eclipse/interp/: Makefile  cmake_install.cmake
(+1082 files in other folders)
